[gd_scene load_steps=4 format=2]

[ext_resource path="res://Source/Theme/Main.theme" type="Theme" id=1]
[ext_resource path="res://Source/Menu/List.gd" type="Script" id=2]
[ext_resource path="res://Source/Theme/ButtonFont.tres" type="DynamicFont" id=4]

[node name="List" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_right = 540.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 120 )
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "List"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Btns" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 24.0
margin_right = -24.0
margin_bottom = -24.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Btns"]
margin_right = 492.0
margin_bottom = 1122.0

[node name="GameDurationLabel" type="Label" parent="Btns/VBoxContainer"]
margin_right = 492.0
margin_bottom = 185.0
size_flags_vertical = 3
theme = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Edit List"
align = 1
valign = 1

[node name="RestaurantName" type="OptionButton" parent="Btns/VBoxContainer"]
margin_top = 189.0
margin_right = 492.0
margin_bottom = 375.0
size_flags_vertical = 3
custom_constants/arrow_margin = 28
text = "Add New (+)"
align = 1
items = [ "Add New (+)", null, false, 0, null ]
selected = 0

[node name="GridContainer" type="GridContainer" parent="Btns/VBoxContainer"]
margin_top = 379.0
margin_right = 492.0
margin_bottom = 1122.0
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CuisineBtn" type="OptionButton" parent="Btns/VBoxContainer/GridContainer"]
margin_right = 244.0
margin_bottom = 369.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/arrow_margin = 8
text = "Cuisine"
clip_text = true
align = 1
items = [ "Cuisine", null, false, 0, null, "American", null, false, 1, null, "Chinese", null, false, 2, null, "Cuban", null, false, 3, null, "French", null, false, 4, null, "Greek", null, false, 5, null, "Indian", null, false, 6, null, "Italian", null, false, 7, null, "Japanese", null, false, 8, null, "Korean", null, false, 9, null, "Malaysian", null, false, 10, null, "Mexican", null, false, 11, null, "Spanish", null, false, 12, null, "Thai", null, false, 13, null, "Vietnamese", null, false, 14, null ]
selected = 0

[node name="RatingBtn" type="OptionButton" parent="Btns/VBoxContainer/GridContainer"]
margin_left = 248.0
margin_right = 492.0
margin_bottom = 369.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/arrow_margin = 8
text = "Rating"
clip_text = true
align = 1
items = [ "Rating", null, false, 0, null, "1 Star", null, false, 1, null, "2 Star", null, false, 2, null, "3 Star", null, false, 3, null, "4 Star", null, false, 4, null, "5 Star", null, false, 5, null ]
selected = 0

[node name="SeatingBtn" type="OptionButton" parent="Btns/VBoxContainer/GridContainer"]
margin_top = 373.0
margin_right = 244.0
margin_bottom = 742.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/arrow_margin = 8
text = "Location"
clip_text = true
align = 1
items = [ "Location", null, false, 0, null, "Indoor", null, false, 1, null, "Outdoor", null, false, 2, null, "Takeout", null, false, 3, null, "All", null, false, 4, null ]
selected = 0

[node name="PriceBtn" type="OptionButton" parent="Btns/VBoxContainer/GridContainer"]
margin_left = 248.0
margin_top = 373.0
margin_right = 492.0
margin_bottom = 742.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/arrow_margin = 8
text = "Price"
clip_text = true
align = 1
items = [ "Price", null, false, 0, null, "$", null, false, 1, null, "$$", null, false, 2, null, "$$$", null, false, 3, null, "$$$$", null, false, 4, null, "$$$$$", null, false, 5, null ]
selected = 0

[node name="BackBtn" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -110.0
margin_top = 10.0
margin_right = -20.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="BackBtn"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[node name="Label" type="Label" parent="BackBtn"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Options"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="item_selected" from="Btns/VBoxContainer/RestaurantName" to="." method="_on_RestaurantName_item_selected"]
[connection signal="item_selected" from="Btns/VBoxContainer/GridContainer/CuisineBtn" to="." method="_on_CuisineBtn_item_selected"]
[connection signal="item_selected" from="Btns/VBoxContainer/GridContainer/RatingBtn" to="." method="_on_RatingBtn_item_selected"]
[connection signal="item_selected" from="Btns/VBoxContainer/GridContainer/SeatingBtn" to="." method="_on_SeatingBtn_item_selected"]
[connection signal="item_selected" from="Btns/VBoxContainer/GridContainer/PriceBtn" to="." method="_on_PriceBtn_item_selected"]
[connection signal="pressed" from="BackBtn" to="." method="_on_BackBtn_pressed"]
